pkg/tests/testthat/errors/mdl/nesting2.mdl
ident EQ1 X1 = Sum(J = 3, 4 : J * Sum(J = -2, -1 : J * Y ) );
